# PokeBot

./: .gitignore  CLAUDE.md  PokeBot_PRD.md  TASKS.md  auth.db  config.example.yaml  daemon.py  pokebot-tasks.md  prd-to-tasks.md  pyproject.toml  requirements.txt  state.db
src/bot/: config.py  logger.py
src/bot/checkout/: captcha.py  cart_manager.py  checkout_flow.py  payment.py  shipping.py
src/bot/evasion/: fingerprint.py  jitter.py  proxy.py  rate_limit.py  resource_blocker.py  robots.py  user_agents.py
src/bot/monitor/: account_assignment.py  one_purchase_enforcer.py  queue_handler.py  stock_monitor.py
src/bot/notifications/: __init__.py  discord.py  telegram.py  webhook.py
src/bot/session/: __init__.py  persistence.py  prewarmer.py  reauth.py
src/dashboard/: auth.py  server.py
src/dashboard/routes/: __init__.py  accounts.py  adapters.py  config.py  daemon_restart.py  dryrun.py  events.py  health.py  monitor.py  status.py
src/dashboard/templates/: index.html
src/shared/: crash_recovery.py  db.py  models.py
tests/: conftest.py
tests/test_bot/: test_config.py  test_fingerprint.py  test_jitter.py  test_logger.py  test_proxy.py  test_retailer_adapter.py  test_target_adapter.py  test_user_agents.py
tests/test_bot/test_checkout/: test_captcha.py  (+4 more)
tests/test_daemon/: test_daemon.py
tests/test_dashboard/: test_adapters.py  test_auth.py  test_config.py  test_dryrun.py  test_events.py  test_health.py  test_middleware.py  test_monitor.py  test_status.py
tests/test_shared/: test_crash_recovery.py  test_db.py  test_models.py  test_project_structure.py
(+24 files in other folders)
